<resources>
    <string name="app_name">Chapter_5_allminitask</string>
    <string name="book_x1">Book x1</string>
    <string name="candle_x2">Candle x2</string>
    <string name="rpharganya00">Rpharganya00</string>
    <string name="lunas">### LUNAS ###</string>
    <string name="total">Total</string>
    <string name="bayar">Bayar</string>
    <string name="kembali">Kembali</string>
    <string name="terima_kasih">Terima Kasih :)</string>
    <string name="NAMA">Nama Produk</string>
    <string name="tulisan">tulisan</string>
    <string name="judulnya">judulnya</string>
    <string name="harganya">harganya</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="daftar">DAFTAR</string>
    <string name="ini_buat_nama_mobil">Ini buat nama mobil</string>
    <string name="ini_buat_price_car">Ini buat price car</string>
    <string name="ini_buat_category">Ini buat category</string>
    <string name="ini_buat_tittle">Ini buat Tittle</string>
</resources>